# csumb-2d-canvas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/glad/: gl.h
ext/stb_image/: stb_image.h
inc/: mb2dc.hpp
inc/audio/: player.h
inc/core/: canvas.hpp  draw_queue.h  draw_queue.hpp  exception.hpp  input.hpp  key_codes.hpp  util.hpp  window.hpp
inc/drawable/: circle.hpp  drawable.hpp  quad.hpp  rect.hpp  vertex.hpp
inc/graphics/: buffer.hpp  context.hpp  framebuffer.hpp  gl_util.hpp  shader.hpp  texture.hpp  vertex_array.hpp
inc/ui/: button.hpp  element.hpp  font.hpp  font_manager.hpp  glyph.hpp  overlay.hpp  text.hpp
res/shaders/: basic.fs.glsl  basic.vs.glsl  blink.fs.glsl  button.fs.glsl  button.vs.glsl  flat.fs.glsl  flat.vs.glsl  tex.fs.glsl  text.fs.glsl  text.vs.glsl
samples/: CMakeLists.txt  basic_audio.cpp  basic_text.cpp  checkers.cpp  main.cpp  rect_and_texture_circle.cpp  samples_common.hpp
src/audio/: player.cpp
src/core/: canvas.cpp  draw_queue.cpp  input.cpp  util.cpp  window.cpp
src/drawable/: circle.cpp  drawable.cpp  quad.cpp  rect.cpp
src/graphics/: buffer.cpp  context.cpp  framebuffer.cpp  gl_util.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/ui/: button.cpp  element.cpp  font.cpp  font_manager.cpp  glyph.cpp  overlay.cpp  text.cpp
